--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,19 @@
 
     <groupId>com.github.CodingAir</groupId>
     <artifactId>PacketManagement</artifactId>
-    <version>1.11</version>
+    <version>1.12</version>
 
     <dependencies>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>16.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
